# Mex.HiGHS

./: .gitignore  CMakeLists.txt  Readme.md  vcpkg.json
matlab/: highstest.m
src/: linprog.cpp  quadprog.cpp
